@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - stashes can now be added in [%Stash] form from a bundle
 
 6.010     2017-07-10 09:22:16-04:00 America/New_York
         - a few documentation improvements (thanks, Chase Whitener, Mary
